# landscape

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-04-19-cli-ingest.md  2026-04-19-perf-batching-parallelization.md  2026-04-20-phase-3.5-scoring.md  2026-04-20-quantified-facts.md  2026-04-28-memory-graph-redesign.md
docs/superpowers/specs/: 2026-04-19-cli-ingest-design.md  2026-04-20-phase-3.5-scoring-design.md  2026-04-20-quantified-facts-design.md  2026-04-21-mcp-streamable-http-migration-design.md  2026-04-28-memory-graph-redesign-design.md
scripts/: bench_ab.py  bench_ab_diff.py  bench_chromadb.py  bench_chromadb_results.json  bench_extraction.py  bench_longmemeval.py  bench_longmemeval_results.json  bench_retrieval.py  demo_codex.md  demo_langchain_agent.py  demo_mcp_session.py  detect-stack.sh  seed_killer_demo.py
scripts/fixtures/: supersession_scenarios.py
specs/: chunk_surfacing.md  perf_batching_and_parallelization.md  vocab_expansion.md
src/landscape/: auth.py  cli.py  config.py  conversation_ingestion.py  main.py  mcp_app.py  mcp_server.py  pipeline.py  security.py  writeback.py
src/landscape/api/: ingest.py  query.py
src/landscape/cli/: __init__.py  __main__.py  auth.py  graph.py  ingest.py  main.py  (+5 more)
tests/: conftest.py  test_api_security.py  test_auth_cli.py  test_auth_store.py  test_bench_ab.py  test_bench_longmemeval.py  test_chromadb_baseline.py  test_chunk_surfacing.py  test_chunks.py  test_cli.py  test_conversation_history.py  test_conversation_schema.py  test_cross_session_retrieval.py  test_cypher_guard.py  test_demo_langchain_agent.py  test_encoder.py  test_entity_type_coercion.py  test_extraction_quality.py  test_ingest.py  test_killer_demo.py  test_langchain_retriever.py  test_llm_options.py  test_mcp_server.py  test_memory_graph_ids.py  test_memory_graph_normalization.py  test_memory_graph_storage.py  test_oauth_flow.py  test_oauth_provider.py  test_perf_batching.py  test_personal_memory.py  test_pipeline_conversation.py  test_provenance.py  test_reinforcement.py  test_rel_type_coercion.py  test_resolution.py  test_retrieval_basic.py  test_retrieval_logging.py  test_scoring.py  test_supersession.py  test_token_counter.py  (+1 more)
(+64 files in other folders)
