[project]
name = "landscape"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "neo4j>=5.27",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.3",
    "einops>=0.8",
    "ollama>=0.4",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-huggingface>=0.1",
    "mcp>=1.0,<2.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]
bench = [
    "chromadb>=1.5",
]

[project.scripts]
landscape = "landscape.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/landscape"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "extraction: slow tests that exercise real LLM extraction quality",
    "retrieval: slow tests that exercise hybrid retrieval over the killer-demo corpus",
    "unit: fast tests with no external services",
    "smoke: lightweight repo-safe surface tests suitable for CI",
    "integration: tests that require local services or stack-backed behavior",
    "external: tests that require optional dependencies, models, or heavyweight environments",
]
